# internal/webserver/handlers/user_handlers.go
@@ -20,6 +20,15 @@ func NewUserHandler(repo *database.UserDB) *UserHandler {
 	}
 }
 
+// Get All Users
+// @Summary      Get all users
+// @Description  Get all users
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Failure      500
+// @Router       /users [get]
 func (u *UserHandler) GetAllUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := u.UserRepo.GetAllUsers()
 	if err != nil {
@@ -27,11 +36,25 @@ func (u *UserHandler) GetAllUsers(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 	usersJson, err := json.Marshal(&users)
+	if err != nil {
+		w.WriteHeader(http.StatusInternalServerError)
+	}
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	w.Write(usersJson)
 }
 
+// Create User
+// @Summary      Create a user
+// @Description  Create a user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        request   body     dto.UserRequestDTO  true "User data"
+// @Success      201 
+// @Failure      400 
+// @Failure      500 
+// @Router       /users/ [post]
 func (u *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	userDTO := &dto.UserRequestDTO{}
 	err := json.NewDecoder(r.Body).Decode(userDTO)
@@ -53,6 +76,18 @@ func (u *UserHandler) CreateUser(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// Get User By ID
+// @Summary      Get a user by ID
+// @Description  Get a user by ID
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id  path  string  true  "User ID"  Format(uuid)
+// @Success      200 
+// @Failure      400
+// @Failure      404
+// @Failure      500 
+// @Router       /users/{id} [get]
 func (u *UserHandler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	parsedID, err := pkgEntity.ParseID(id)
@@ -81,6 +116,17 @@ func (u *UserHandler) GetUserByID(w http.ResponseWriter, r *http.Request) {
 	w.Write(userJson)
 }
 
+// Delete User
+// @Summary      Delete a user
+// @Description  Delete a user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id  path  string  true  "User ID"  Format(uuid)
+// @Success      204
+// @Failure      400
+// @Failure      404
+// @Router       /users/{id} [delete]
 func (u *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	parsedID, err := pkgEntity.ParseID(id)
@@ -97,6 +143,19 @@ func (u *UserHandler) DeleteUser(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNoContent)
 }
 
+// Update User
+// @Summary      Update a user
+// @Description  Update a user
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id  path  string  true  "User ID"  Format(uuid)
+// @Param        request  body  dto.UserResponseDTO  true  "User Data"
+// @Success      200
+// @Failure      400
+// @Failure      404
+// @Failure      500
+// @Router       /users/{id} [put]
 func (u *UserHandler) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	userBody := &dto.UserRequestDTO{}
 	err := json.NewDecoder(r.Body).Decode(userBody)
